в добавлении надо починить что сначала пишет что некорректно ну и в целом надо дописать команды